--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -457,7 +457,7 @@
           </div>
         </div>
 
-        <div class="col-b"><img src="/assets/doc.png" alt="" /></div>
+        <div class="col-b"><img src="./assets/doc.png" alt="" /></div>
       </div>
     </section>
 
@@ -546,7 +546,7 @@
         </div>
 
         <div class="col-b">
-          <img src="/assets/homem-negro.png" alt="" />
+          <img src="./assets/homem-negro.png" alt="" />
         </div>
       </div>
     </section>
@@ -725,6 +725,6 @@
     </a>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
